--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "format": "bunx prettier -w ."
   },
   "overrides": {
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "module": "index.ts",
   "type": "module",
