feat: add api and db packages with better-auth integration
- Add packages/api with Hono server and better-auth setup
- Add packages/db with Prisma schema for auth tables
- Add .env.example with required environment variables
- Update root package.json with new db scripts (db:generate, db:migrate, db:push, db:studio)
- Add concurrent dev script to run api and web together

--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
     "packages/*"
   ],
   "scripts": {
+    "dev": "bun run dev:api & bun run dev:web",
     "dev:api": "bun run --cwd packages/api dev",
     "dev:web": "bun run --cwd packages/web dev",
     "build:web": "bun run --cwd packages/web build",
-    "prisma:generate": "bun run --cwd packages/db prisma:generate",
-    "prisma:migrate": "bun run --cwd packages/db prisma:migrate",
+    "db:generate": "bun run --cwd packages/db prisma:generate",
+    "db:migrate": "bun run --cwd packages/db prisma:migrate",
+    "db:push": "bun run --cwd packages/db prisma:push",
+    "db:studio": "bun run --cwd packages/db prisma:studio",
     "format": "bunx prettier -w ."
   },
   "overrides": {
