--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.20",
     "@tanstack/react-router": "^1.159.4",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "viem": "^2.45.2",
+    "wagmi": "^3.4.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
