feat: implement security questionnaire system with improved schema
Add comprehensive security data collection and questionnaire system:
- Separate Question and QuestionAnswer models for better data structure
- Add security questionnaire script with sample data and risk scoring
- Implement API routes for questionnaire submission and retrieval
- Update AI report generator to use new questionnaire structure
- Add database migration scripts and seed utilities
- Update web components to integrate with new questionnaire flow

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -7,7 +7,8 @@
     "prisma:generate": "bunx prisma generate",
     "prisma:migrate": "bunx prisma migrate dev",
     "prisma:push": "bunx prisma db push",
-    "prisma:studio": "bunx prisma studio"
+    "prisma:studio": "bunx prisma studio",
+    "seed": "bun run src/scripts/seed-security-questionnaire.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.3.1"
