--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,30 @@
-# Database
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/clawctor?schema=public"
+# Database Configuration
+POSTGRES_USER=clawctor
+POSTGRES_PASSWORD=your_secure_password_here
+POSTGRES_DB=clawctor_db
+POSTGRES_PORT=5432
 
-# API
+# API Configuration
+API_PORT=3001
 PORT=3001
+NODE_ENV=production
+
+# Database URL for Prisma (Docker)
+DATABASE_URL="postgresql://clawctor:your_secure_password_here@postgres:5432/clawctor_db?schema=public"
+
+# Database URL for Local Development
+# DATABASE_URL="postgresql://postgres:postgres@localhost:5432/clawctor?schema=public"
 
 # Google Gemini AI API Key (required for AI risk assessment)
 GOOGLE_GENERATIVE_AI_API_KEY="your-google-gemini-api-key"
 
-# Frontend
-VITE_API_URL="http://localhost:3001/api"
+# Web Configuration
+WEB_PORT=80
+VITE_API_URL="http://localhost:3001"
 
+# Blockchain Configuration
 AICC_TOKEN_ADDRESS=0x6F947b45C023Ef623b39331D0C4D21FBC51C1d45
+
+# Nginx Configuration (when using nginx profile)
+NGINX_HTTP_PORT=8080
+NGINX_HTTPS_PORT=8443
