--- a/.dockerignore
+++ b/.dockerignore
@@ -42,11 +42,10 @@ coverage
 # Misc
 *.md
 !README.md
+!nginx-web.conf
 .claude
 
 # Docker
 docker-compose*.yml
 docker-compose*.yaml
-nginx.conf
-nginx-web.conf
 ssl/
