fix: use sectionKey instead of sectionId in Question queries
Fixed Prisma query error where Question.findMany was incorrectly using
sectionId field. The Question model uses sectionKey to link questions
to sections, not sectionId.

Changes:
- Updated getQuestionnaire to query questions by sectionKey
- Updated getLatestQuestionnaire to query questions by sectionKey
- Simplified query logic by fetching questions directly from Question table

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "db:migrate": "bun run --cwd packages/db prisma:migrate",
     "db:push": "bun run --cwd packages/db prisma:push",
     "db:studio": "bun run --cwd packages/db prisma:studio",
-    "format": "bunx prettier -w ."
+    "format": "bun prettier -w ."
   },
   "overrides": {
     "react": "^19.2.0",
