--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -15,7 +15,7 @@ services:
     ports:
       - "${POSTGRES_PORT:-5432}:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-clawctor}"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-clawctor} -d ${POSTGRES_DB:-clawctor_db}"]
       interval: 10s
       timeout: 5s
       retries: 5
