--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@coinbase/wallet-sdk": "^4.3.7",
     "@tanstack/react-query": "^5.90.20",
     "@tanstack/react-router": "^1.159.4",
     "react": "^19.2.0",
